// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders with default style 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

<button
  className="c0"
/>
`;

exports[`<Button /> renders with theme 1`] = `
.c0 {
  cursor: pointer;
  background: #202124;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #fff;
  text-transform: uppercase;
}

<button
  className="c0"
/>
`;

exports[`<ButtonMain /> renders hidden 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
  className="c0 c1"
  visible={false}
/>
`;

exports[`<ButtonMain /> renders visible 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
  className="c0 c1"
  visible={true}
/>
`;

exports[`<ButtonMain /> renders with default style 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
  className="c0 c1"
/>
`;

exports[`<ButtonMain /> renders with theme 1`] = `
.c0 {
  cursor: pointer;
  background: #202124;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #fff;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: none;
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
  className="c0 c1"
/>
`;

exports[`<ToggleSpan /> open/close 1`] = `
.c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #000;
  transition: transform 0.2s linear;
}

<span
  className="c0"
  open={false}
/>
`;

exports[`<ToggleSpan /> renders with default style 1`] = `
.c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #000;
  transition: transform 0.2s linear;
}

<span
  className="c0"
  open={true}
/>
`;

exports[`<ToggleSpan /> renders with default style 2`] = `
.c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #fff;
  transition: transform 0.2s linear;
}

<span
  className="c0"
  open={true}
/>
`;

exports[`renders default <ButtonAdd />' 1`] = `
.c0 {
  cursor: pointer;
  height: auto;
  background: transparent;
  border: 0;
}

.c1 {
  margin: 0.5rem 0 0 0;
}

<button
  className="c0 c1"
/>
`;

exports[`renders default <ButtonIcon />' 1`] = `
.c0 {
  cursor: pointer;
  height: auto;
  background: transparent;
  border: 0;
}

<button
  className="c0"
/>
`;

exports[`renders default <ButtonRemove />' 1`] = `
.c0 {
  cursor: pointer;
  height: auto;
  background: transparent;
  border: 0;
}

.c1 {
  margin-top: -0.6rem;
}

<button
  className="c0 c1"
/>
`;

exports[`renders default <ButtonTheme />' 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  background: transparent;
}

@media screen and (min-width:40rem) {
  .c1 {
    margin: 0 1rem;
  }
}

<button
  className="c0 c1"
/>
`;

exports[`renders default <MenuToggle />' 1`] = `
.c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: 0 1rem;
  padding: 0;
  background: transparent;
  overflow: hidden;
}

@media screen and (min-width:40rem) {
  .c1 {
    display: none;
  }
}

<button
  className="c0 c1"
/>
`;
